<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".CreateUser">

        <!-- Title -->
        <TextView
            android:id="@+id/activity_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/title_new_contact"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/brown_dark"

            android:layout_marginTop="100dp"
            android:gravity="center"
            />

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="20dp"
            android:padding="15dp"

            android:layout_marginTop="60dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            />

        <EditText
            android:id="@+id/editSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_surname"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="20dp"
            android:padding="15dp"

            android:layout_marginTop="20dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            />

        <LinearLayout
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp">

            <EditText
                android:id="@+id/editAge"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_age"
                android:inputType="number"
                android:maxLength="3"
                android:textSize="20dp"
                android:padding="15dp"

                />

            <EditText
                android:id="@+id/editMobileNumber"
                android:layout_width="212dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:hint="@string/hint_mobile_number"
                android:inputType="number"
                android:maxLength="15"
                android:textSize="20dp"
                android:padding="15dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="20dp"
            android:padding="15dp"

            android:layout_marginTop="20dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            />

        <Button
            android:id="@+id/btn_createUser"
            style="@style/ButtonDark"
            android:text="@string/txt_add"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"/>



    </LinearLayout>
</ScrollView>